PixelWalker copy bot changelog

2025-09-12 Version 1.8.0
- Bot: Improved .paste and .smartpaste commands, by immediately pasting repeated blocks.

2025-09-07 Version 1.7.3
- Bot: Fix .import command pasting just empty blocks.

2025-08-21 Version 1.7.2
- Bot: Allow .edit id to replace blocks to air (empty).

2025-08-16 Version 1.7.1
- Bot: Updated to work with PixelWalker version 0.24.0-alpha

2025-08-12 Version 1.7.0
- Bot: Improved .edit command, by immediately pasting changed blocks.

2025-08-12 Version 1.6.5
- Bot: Fixed an issue where destination arguments would get ignored in .import command.

2025-08-01 Version 1.6.4
- Website: Fixed an issue where EER/EELVL import sometimes didn't work, when world had piano notes or switch resetters.
- Website: Fixed an issue where EER/EELVL import would place black background even when world didn't have world background set.

2025-07-31 Version 1.6.3
- Website: Improved EER/EELVL import, by placing PW hex backgrounds from world background color setting.

2025-07-30 Version 1.6.2
- Website: Fixed an issue where world portal wasn't importing properly in EER import.
- Website: Improved EER import, by placing additional PW blocks that exist in EER. Thanks John!

2025-07-29 Version 1.6.1
- Website: Fixed an issue, where some positions of blocks would be ignored when importing EER worlds. Thanks John!

2025-07-28 Version 1.6.0
- Website: Added an option to import Everybody Edits Rewritten (EER) worlds.

2025-07-24 Version 1.5.2
- Website: Midi files with two identical notes at the same time no longer try to play both notes. Thanks Bluecloud!

2025-07-23 Version 1.5.1
- Bot: Updated to work with PixelWalker version 0.23.1-alpha

2025-07-19 Version 1.5.0
- Bot: Added command ".edit id find_id replace_id" - edits selected block ids from "find_id" to "replace_id".
- Bot: .move mode now does not get disabled anymore when new area is selected.
- Bot: Improved .move mode block placement speed a little.