@@ -2,6 +2,7 @@ PixelWalker copy bot changelog
 
 2025-09-12 Version 1.8.0
 - Bot: Improved .paste and .smartpaste commands, by immediately pasting repeated blocks.
+- Bot: When doing partial import with .import, allow specifying any 2 corner positions (just like when selecting area with gold coins).
 
 2025-09-07 Version 1.7.3
 - Bot: Fix .import command pasting just empty blocks.
